--- a/web/src/App.css
+++ b/web/src/App.css
@@ -1,38 +1,19 @@
-body {
-  font-family: 'Arial', sans-serif;
-  background-color: #f0f2f5;
-  margin: 0;
-  padding: 0;
+body{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
 
-.container {
-  max-width: 600px;
-  margin: 50px auto;
-  padding: 20px;
-  background-color: #fff;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-.card {
-  border: none;
-}
-
-.card-title {
-  font-size: 1.5rem;
-  margin-bottom: 20px;
-  text-align: center;
-  color: #333;
-}
-
-.chat-box {
-  height: 400px;
+.chat-window {
+  flex-grow: 1;
   overflow-y: auto;
-  border: 1px solid #e0e0e0;
+  border: 1px solid #333;
   padding: 20px;
-  background-color: #fafafa;
+  background-color: #2c2c2c;
   border-radius: 10px;
   margin-bottom: 20px;
+  width: 100%;
 }
 
 .message {
@@ -52,8 +33,8 @@ body {
 }
 
 .message.bot .message-content {
-  background-color: #e9ecef;
-  color: #333;
+  background-color: #444;
+  color: #e0e0e0;
   text-align: left;
   border-radius: 20px;
   padding: 10px 15px;
@@ -63,25 +44,24 @@ body {
 .input-group {
   display: flex;
   align-items: center;
+  width: 100%;
 }
 
 .input-group input {
-  flex: 1;
   padding: 10px;
-  border: 1px solid #e0e0e0;
+  border: 1px solid #333;
   border-radius: 20px;
   margin-right: 10px;
+}
+
+.input-group input::placeholder {
+  color: #888; /* Cor do placeholder */
 }
 
 .input-group button {
   padding: 10px 20px;
   border: none;
-  background-color: #007bff;
   color: #fff;
   border-radius: 20px;
   cursor: pointer;
-}
-
-.input-group button:hover {
-  background-color: #0056b3;
 }
