--- a/web/src/pages/Home/Home.css
+++ b/web/src/pages/Home/Home.css
@@ -114,11 +114,12 @@ header div a:hover {
     position: fixed;
     width: 100%;
     height: 100vh;
-    background-color: #008CDC;
+    background-color: #222831;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    gap: 50px;
     z-index: 100;
     color: white;
     font-size: 20px;
